--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14,351</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">59</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.example.tests.One_statement_fill_form</td><td><a href="#m0">main</a></td><td rowspan="1">1748514436761</td><td rowspan="1">14301</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.example.tests.TestNG_Reports</td><td><a href="#m0">Testcase01</a></td><td rowspan="1">1748596752463</td><td rowspan="1">8</td></tr><tr class="passedeven"><td><a href="#m1">Testcase02</a></td><td rowspan="1">1748596752476</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">Testcase03</a></td><td rowspan="1">1748596752480</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.example.tests.One_statement_fill_form#main</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.example.tests.TestNG_Reports#Testcase01</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Test 1 log<br/>Test 1 another log<br/>Test 1 another log</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.example.tests.TestNG_Reports#Testcase02</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Test 2 log</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.example.tests.TestNG_Reports#Testcase03</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Test 3 log</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
