--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Nmsworks\AppData\Local\Temp\testng-eclipse-548584160\testng-customsuite.xml</span>
+                    <span>C:\Users\Nmsworks\AppData\Local\Temp\testng-eclipse--371215596\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.example.tests.One_statement_fill_form" class="method navigator-link" hash-for-method="main">main</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.example.tests.TestNG_Reports" class="method navigator-link" hash-for-method="Testcase01">Testcase01</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.example.tests.TestNG_Reports" class="method navigator-link" hash-for-method="Testcase02">Testcase02</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.example.tests.TestNG_Reports" class="method navigator-link" hash-for-method="Testcase03">Testcase03</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +131,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.example.tests.One_statement_fill_form</span>
+              <span class="class-name">com.example.tests.TestNG_Reports</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="main">
-                  </a> <!-- main -->
-                  <span class="method-name">main</span>
+                  <a name="Testcase01">
+                  </a> <!-- Testcase01 -->
+                  <span class="method-name">Testcase01</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Testcase02">
+                  </a> <!-- Testcase02 -->
+                  <span class="method-name">Testcase02</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Testcase03">
+                  </a> <!-- Testcase03 -->
+                  <span class="method-name">Testcase03</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +160,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Nmsworks\AppData\Local\Temp\testng-eclipse-548584160\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Nmsworks\AppData\Local\Temp\testng-eclipse--371215596\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +169,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.example.tests.One_statement_fill_form&quot;/&gt;
+      &lt;class name=&quot;com.example.tests.TestNG_Reports&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,16 +209,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'main')
-data.setCell(0, 2, 'com.example.tests.One_statement_fill_form')
-data.setCell(0, 3, 14301);
+data.setCell(0, 1, 'Testcase01')
+data.setCell(0, 2, 'com.example.tests.TestNG_Reports')
+data.setCell(0, 3, 8);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Testcase02')
+data.setCell(1, 2, 'com.example.tests.TestNG_Reports')
+data.setCell(1, 3, 2);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'Testcase03')
+data.setCell(2, 2, 'com.example.tests.TestNG_Reports')
+data.setCell(2, 3, 2);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 12 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -205,6 +237,26 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Testcase01</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Test 1 log</span>
+                <span class="reporter-method-output">Test 1 another log</span>
+                <span class="reporter-method-output">Test 1 another log</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Testcase02</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Test 2 log</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Testcase03</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Test 3 log</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -220,10 +272,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.example.tests.One_statement_fill_form</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.example.tests.TestNG_Reports</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">main</span>
+                <span class="method-name">Testcase01</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Testcase02</span>
+                <span class="method-start">13 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Testcase03</span>
+                <span class="method-start">17 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
